feat: pdf viewer

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 	implementation 'org.apache.poi:poi-ooxml:5.4.1'
 	implementation 'org.apache.pdfbox:pdfbox:3.0.5'
 	implementation 'org.apache.tika:tika-core:2.9.4'
+	implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:3.57.0'
+	implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient-jersey:3.57.2'
+	implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient:3.57.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
