--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.apache.poi:poi-ooxml:5.4.1'
+	implementation 'org.docx4j:docx4j-core:11.5.3'
+	implementation 'org.docx4j:docx4j-export-fo:11.5.3'
 	implementation 'org.apache.pdfbox:pdfbox:3.0.5'
 	implementation 'org.apache.tika:tika-core:2.9.4'
 	implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:3.57.0'
