refactor: preview service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,4 +54,5 @@ crypto-setting:
   salt: mo2ver_salt
 
 file-setting:
-  filepath: ./data/files
+  file-path: ./data/files
+  image-path: ./data/images
