--- a/spring-docs-viewer/build.gradle
+++ b/spring-docs-viewer/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'org.springframework.boot' version '3.5.3'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.apache.tika:tika-core:2.9.4'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.3'
@@ -15,5 +15,10 @@ dependencies {
     implementation 'org.docx4j:docx4j-export-fo:11.5.3'
     implementation 'org.apache.pdfbox:pdfbox:3.0.5'
 
+    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Test 설정
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
