refactor: spring docs viewer libreOffice → module

--- a/spring-docs-viewer-libre-office/build.gradle
+++ b/spring-docs-viewer-libre-office/build.gradle
@@ -7,8 +7,6 @@ repositories {
 }
 
 dependencies {
-    implementation gradleApi()
-    implementation localGroovy()
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
@@ -17,9 +15,9 @@ gradlePlugin {
     plugins {
         docsViewer {
             id = 'com.docs.viewer'
-            implementationClass = 'com.docs.viewer.ViewerPlugin'
-            displayName = 'Docs Viewer Native Bridge Plugin'
-            description = 'Automatically builds and integrates native (C#, Go, JNI) code for Docs Viewer.'
+            implementationClass = 'com.docs.viewer.LibreOfficePlugin'
+            displayName = 'Docs Viewer Native Libre Office Plugin'
+            description = 'Automatically builds and integrates native (C++) code for Docs Viewer.'
         }
     }
 }
