--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'viewer'
 include 'spring-docs-viewer'
 include 'spring-docs-viewer-plugin'
 include 'spring-docs-viewer-libre-office'
+include 'spring-docs-viewer-activex'
