--- a/spring-docs-viewer-activex/build.gradle
+++ b/spring-docs-viewer-activex/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation files('libs/jacob.jar')
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
