--- a/spring-docs-viewer/build.gradle
+++ b/spring-docs-viewer/build.gradle
@@ -21,4 +21,5 @@ dependencies {
 
     // Test 설정
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
