--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'viewer'
 
 include 'spring-docs-viewer'
-include 'spring-docs-viewer-plugin'
+include 'spring-docs-viewer-core'
 include 'spring-docs-viewer-activex'
 include 'spring-docs-viewer-libre-office-maven'
 include 'spring-docs-viewer-libre-office-plugin'
