--- a/dotnet-docs-viewer/appsettings.json
+++ b/dotnet-docs-viewer/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=3309;Database=viewer;User ID=root;Password=root"
+  },
+  "NHibernate": {
+    "Hbm2DdlAuto": "none"
+  }
 }
