--- a/dotnet-docs-viewer/dotnet-docs-viewer.csproj
+++ b/dotnet-docs-viewer/dotnet-docs-viewer.csproj
@@ -7,4 +7,12 @@
         <RootNamespace>dotnet_docs_viewer</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentNHibernate" Version="3.4.1" />
+      <PackageReference Include="MySql.Data" Version="9.5.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+      <PackageReference Include="NHibernate" Version="5.6.0" />
+      <PackageReference Include="NHibernate.Linq" Version="1.0.0" />
+    </ItemGroup>
+
 </Project>
