feat: dotnet nHibernate → snake case upper

--- a/dotnet-docs-viewer/appsettings.json
+++ b/dotnet-docs-viewer/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3309;Database=viewer;User ID=root;Password=root"
+    "DefaultConnection": "Server=127.0.0.1;Port=3309;Database=viewer2;User ID=root;Password=root"
   },
   "NHibernate": {
-    "Hbm2DdlAuto": "none"
+    "Hbm2DdlAuto": "create"
   }
 }
