refactor: dotnet structure

--- a/dotnet-docs-viewer/appsettings.Development.json
+++ b/dotnet-docs-viewer/appsettings.Development.json
@@ -4,5 +4,21 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Kestrel": {
+    "Endpoints": { "Http": { "Url": "http://0.0.0.0:6000" } },
+    "Limits": { "MaxRequestBodySize" : 104857600 }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "mo2ver",
+    "DB": {
+      "Server": "localhost",
+      "Port": 3309,
+      "Database": "viewer2",
+      "Uid": "root",
+      "Pwd": "root",
+      "Hbm2DdlAuto": "create"
+    }
   }
 }
