--- a/dotnet-docs-viewer/appsettings.json
+++ b/dotnet-docs-viewer/appsettings.json
@@ -5,11 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3309;Database=viewer2;User ID=root;Password=root"
+  "Kestrel": {
+    "Endpoints": { "Http": { "Url": "http://0.0.0.0:80" } },
+    "Limits": { "MaxRequestBodySize" : 104857600 }
   },
-  "NHibernate": {
-    "Hbm2DdlAuto": "create"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "mo2ver",
+    "DB": {
+      "Server": "localhost",
+      "Port": 3309,
+      "Database": "viewer2",
+      "Uid": "root",
+      "Pwd": "root",
+      "Hbm2DdlAuto": "none"
+    }
   }
 }
