--- a/dotnet-docs-viewer/dotnet-docs-viewer.csproj
+++ b/dotnet-docs-viewer/dotnet-docs-viewer.csproj
@@ -9,10 +9,16 @@
 
     <ItemGroup>
       <PackageReference Include="FluentNHibernate" Version="3.4.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.0" />
       <PackageReference Include="MySql.Data" Version="9.5.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
       <PackageReference Include="NHibernate" Version="5.6.0" />
       <PackageReference Include="NHibernate.Linq" Version="1.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
