feat: dotnet service → file

--- a/dotnet-docs-viewer/appsettings.json
+++ b/dotnet-docs-viewer/appsettings.json
@@ -19,6 +19,14 @@
       "Uid": "root",
       "Pwd": "root",
       "Hbm2DdlAuto": "none"
+    },
+    "Crypto": {
+      "Password": "mo2ver_aes256cbc_pbkdf2",
+      "Salt": "mo2ver_salt"
+    },
+    "File": {
+      "FilePath": "./data/files",
+      "ImagePath": "./data/images"
     }
   }
 }
