--- a/dotnet-docs-viewer/dotnet-docs-viewer.csproj
+++ b/dotnet-docs-viewer/dotnet-docs-viewer.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
       <PackageReference Include="FluentNHibernate" Version="3.4.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.0" />
@@ -15,6 +16,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
       <PackageReference Include="NHibernate" Version="5.6.0" />
       <PackageReference Include="NHibernate.Linq" Version="1.0.0" />
+      <PackageReference Include="PdfPig.Rendering.Skia" Version="0.1.12.2" />
+      <PackageReference Include="SkiaSharp" Version="3.119.1" />
     </ItemGroup>
 
     <ItemGroup>
