--- a/dotnet-docs-viewer/dotnet-docs-viewer.csproj
+++ b/dotnet-docs-viewer/dotnet-docs-viewer.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="FluentNHibernate" Version="3.4.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.0" />
+      <PackageReference Include="Mime" Version="3.8.0" />
       <PackageReference Include="MySql.Data" Version="9.5.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
       <PackageReference Include="NHibernate" Version="5.6.0" />
@@ -21,7 +22,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
       <Folder Include="wwwroot\" />
     </ItemGroup>
 
