--- a/spring-docs-viewer-libre-office/maven/build.gradle
+++ b/spring-docs-viewer-libre-office/maven/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     compileOnly gradleApi()
+    implementation project(":spring-docs-viewer-libre-office-common")
 }
 
 def os = System.getProperty("os.name").toLowerCase()
