--- a/spring-docs-viewer-libre-office/plugin/build.gradle
+++ b/spring-docs-viewer-libre-office/plugin/build.gradle
@@ -8,6 +8,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(":spring-docs-viewer-libre-office-common")
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
