feat, refactor: libre module api → jpa, common

--- a/spring-docs-viewer-libre-office/common/build.gradle
+++ b/spring-docs-viewer-libre-office/common/build.gradle
@@ -1,10 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '3.5.3'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'java'
 }
-
-group = 'com.docs.viewer'
-version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -12,18 +8,6 @@ repositories {
 
 dependencies {
     compileOnly gradleApi()
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.3'
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    // Test 설정
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
