--- a/spring-docs-viewer-libre-office/jpa/build.gradle
+++ b/spring-docs-viewer-libre-office/jpa/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+    implementation 'org.apache.tika:tika-core:3.2.2'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.3'
 
     compileOnly 'org.projectlombok:lombok'
